v1.0.0/modules/schema/pages/class/NoLoadTest.adoc
= `NoLoadTest`
:toclevels: 4


+++No-load test results determine core admittance parameters. They include exciting current and core loss measurements from applying voltage to one winding. The excitation may be positive sequence or zero sequence. The test may be repeated at different voltages to measure saturation.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:NoLoadTest`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/TransformerTest.adoc[`TransformerTest`]
*** *`NoLoadTest`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
NoLoadTest {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}













TransformerEndInfo {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}







DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}









NoLoadTest -> TransformerEndInfo: EnergisedEnd




NoLoadTest -> DiagramObject: DiagramObjects


NoLoadTest -> InstanceSet: InstanceSet


NoLoadTest -> Name: Names


NoLoadTest -> ChangeSetMember: PropertiesCIMDataObject


NoLoadTest -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<EnergisedEnd,`EnergisedEnd`>>
| 0..1
| xref::class/TransformerEndInfo.adoc[`TransformerEndInfo`]
| +++Transformer end that current is applied to in this no-load test.+++

| <<energisedEndVoltage,`energisedEndVoltage`>>
| 0..1
| xref::class/Voltage.adoc[`Voltage`]
| +++Voltage applied to the winding (end) during test.+++

| <<excitingCurrent,`excitingCurrent`>>
| 0..1
| xref::class/PerCent.adoc[`PerCent`]
| +++Exciting current measured from a positive-sequence or single-phase excitation test.+++

| <<excitingCurrentZero,`excitingCurrentZero`>>
| 0..1
| xref::class/PerCent.adoc[`PerCent`]
| +++Exciting current measured from a zero-sequence open-circuit excitation test.+++

| <<loss,`loss`>>
| 0..1
| xref::class/KiloActivePower.adoc[`KiloActivePower`]
| +++Losses measured from a positive-sequence or single-phase excitation test.+++

| <<lossZero,`lossZero`>>
| 0..1
| xref::class/KiloActivePower.adoc[`KiloActivePower`]
| +++Losses measured from a zero-sequence excitation test.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<basePower,`basePower`>>
| 0..1
| xref::class/ApparentPower.adoc[`ApparentPower`]
| +++Base power at which the tests are conducted, usually equal to the rateds of one of the involved transformer ends.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<temperature,`temperature`>>
| 0..1
| xref::class/Temperature.adoc[`Temperature`]
| +++Temperature at which the test is conducted.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#basePower]
=== `basePower`
+++Base power at which the tests are conducted, usually equal to the rateds of one of the involved transformer ends.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerTest.basePower`
| Cardinality
| 0..1
| Type
| xref::class/ApparentPower.adoc[`ApparentPower`]

| Inherited from
| xref::class/TransformerTest.adoc[`TransformerTest`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#EnergisedEnd]
=== `EnergisedEnd`
+++Transformer end that current is applied to in this no-load test.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:NoLoadTest.EnergisedEnd`
| Cardinality
| 0..1
| Type
| xref::class/TransformerEndInfo.adoc[`TransformerEndInfo`]


|===

//[discrete]
[#energisedEndVoltage]
=== `energisedEndVoltage`
+++Voltage applied to the winding (end) during test.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:NoLoadTest.energisedEndVoltage`
| Cardinality
| 0..1
| Type
| xref::class/Voltage.adoc[`Voltage`]


|===

//[discrete]
[#excitingCurrent]
=== `excitingCurrent`
+++Exciting current measured from a positive-sequence or single-phase excitation test.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:NoLoadTest.excitingCurrent`
| Cardinality
| 0..1
| Type
| xref::class/PerCent.adoc[`PerCent`]


|===

//[discrete]
[#excitingCurrentZero]
=== `excitingCurrentZero`
+++Exciting current measured from a zero-sequence open-circuit excitation test.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:NoLoadTest.excitingCurrentZero`
| Cardinality
| 0..1
| Type
| xref::class/PerCent.adoc[`PerCent`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#loss]
=== `loss`
+++Losses measured from a positive-sequence or single-phase excitation test.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:NoLoadTest.loss`
| Cardinality
| 0..1
| Type
| xref::class/KiloActivePower.adoc[`KiloActivePower`]


|===

//[discrete]
[#lossZero]
=== `lossZero`
+++Losses measured from a zero-sequence excitation test.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:NoLoadTest.lossZero`
| Cardinality
| 0..1
| Type
| xref::class/KiloActivePower.adoc[`KiloActivePower`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#temperature]
=== `temperature`
+++Temperature at which the test is conducted.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerTest.temperature`
| Cardinality
| 0..1
| Type
| xref::class/Temperature.adoc[`Temperature`]

| Inherited from
| xref::class/TransformerTest.adoc[`TransformerTest`]


|===


